// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="page page-limited"
  id="project-permissions-page"
>
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="permissions.page"
  />
  <PageHeader
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
      }
    }
    loadHolders={[Function]}
    loading={true}
  />
  <div>
    <VisibilitySelector
      className="big-spacer-top big-spacer-bottom"
      onChange={[Function]}
    />
  </div>
  <AllHoldersList
    filter="all"
    grantPermissionToGroup={[Function]}
    grantPermissionToUser={[Function]}
    groups={[]}
    onFilter={[Function]}
    onLoadMore={[Function]}
    onQuery={[Function]}
    onSelectPermission={[Function]}
    permissions={
      [
        {
          "description": "projects_role.user.desc",
          "key": "user",
          "name": "projects_role.user",
        },
        {
          "description": "projects_role.codeviewer.desc",
          "key": "codeviewer",
          "name": "projects_role.codeviewer",
        },
        {
          "description": "projects_role.issueadmin.desc",
          "key": "issueadmin",
          "name": "projects_role.issueadmin",
        },
        {
          "description": "projects_role.securityhotspotadmin.desc",
          "key": "securityhotspotadmin",
          "name": "projects_role.securityhotspotadmin",
        },
        {
          "description": "projects_role.admin.desc",
          "key": "admin",
          "name": "projects_role.admin",
        },
        {
          "description": "projects_role.scan.desc",
          "key": "scan",
          "name": "projects_role.scan",
        },
      ]
    }
    query=""
    revokePermissionFromGroup={[Function]}
    revokePermissionFromUser={[Function]}
    users={[]}
  />
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="page page-limited"
  id="project-permissions-page"
>
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="permissions.page"
  />
  <PageHeader
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
      }
    }
    loadHolders={[Function]}
    loading={false}
  />
  <div>
    <VisibilitySelector
      className="big-spacer-top big-spacer-bottom"
      onChange={[Function]}
    />
  </div>
  <AllHoldersList
    filter="all"
    grantPermissionToGroup={[Function]}
    grantPermissionToUser={[Function]}
    groups={
      [
        {
          "description": "SonarSource team",
          "id": "1",
          "name": "SonarSource",
          "permissions": [
            "admin",
            "codeviewer",
            "issueadmin",
          ],
        },
        {
          "name": "Anyone",
          "permissions": [],
        },
      ]
    }
    groupsPaging={
      {
        "pageIndex": 1,
        "pageSize": 100,
        "total": 2,
      }
    }
    onFilter={[Function]}
    onLoadMore={[Function]}
    onQuery={[Function]}
    onSelectPermission={[Function]}
    permissions={
      [
        {
          "description": "projects_role.user.desc",
          "key": "user",
          "name": "projects_role.user",
        },
        {
          "description": "projects_role.codeviewer.desc",
          "key": "codeviewer",
          "name": "projects_role.codeviewer",
        },
        {
          "description": "projects_role.issueadmin.desc",
          "key": "issueadmin",
          "name": "projects_role.issueadmin",
        },
        {
          "description": "projects_role.securityhotspotadmin.desc",
          "key": "securityhotspotadmin",
          "name": "projects_role.securityhotspotadmin",
        },
        {
          "description": "projects_role.admin.desc",
          "key": "admin",
          "name": "projects_role.admin",
        },
        {
          "description": "projects_role.scan.desc",
          "key": "scan",
          "name": "projects_role.scan",
        },
      ]
    }
    query=""
    revokePermissionFromGroup={[Function]}
    revokePermissionFromUser={[Function]}
    users={
      [
        {
          "avatar": "admin-avatar",
          "email": "admin@gmail.com",
          "login": "admin",
          "name": "Admin Admin",
          "permissions": [
            "admin",
          ],
        },
        {
          "avatar": "user-avatar-1",
          "email": "user1@gmail.com",
          "login": "user1",
          "name": "User Number 1",
          "permissions": [],
        },
        {
          "avatar": "user-avatar-2",
          "email": "user2@gmail.com",
          "login": "user2",
          "name": "User Number 2",
          "permissions": [],
        },
      ]
    }
    usersPaging={
      {
        "pageIndex": 1,
        "pageSize": 100,
        "total": 3,
      }
    }
  />
</div>
`;
